changed links to have no underline, map.css to fix text alignment

--- a/LOTR-fanpage/src/components/MapStyle.scss
+++ b/LOTR-fanpage/src/components/MapStyle.scss
@@ -16,7 +16,7 @@ $transition-time: 0.25s;
   
 html {
   color: $color-background;
-  text-align: center;
+  //text-align: center;
   font-family: $font-stack-main;
 }
 
